--- a/src/app/pages/beginner/beginner.page.html
+++ b/src/app/pages/beginner/beginner.page.html
@@ -55,7 +55,7 @@
             </ion-button>
             <ion-button href="listening-beginner" color="light">
                 <div class="icon">
-                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Listening
+                    <ion-icon name="volume-high" size="large"></ion-icon> <br> Speaking
                 </div>
             </ion-button>
             <ion-button href="testess" color="light">
