--- a/src/app/pages/beginner/topics-vocabulary1/topicsVocabulary1/things/things.page.html
+++ b/src/app/pages/beginner/topics-vocabulary1/topicsVocabulary1/things/things.page.html
@@ -3,14 +3,14 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="topics-vocabulary1"></ion-back-button>
         </ion-buttons>
-        <ion-title>Places and buildings</ion-title>
+        <ion-title>Things</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
     <ion-card>
-        <ion-slides pager="true" [options]="slideOptsOne">
+        <ion-slides pager="false" [options]="slideOptsOne">
 
             <ion-slide>
                 <div class="img">
