--- a/src/app/pages/beginner/topics-vocabulary1/topics-vocabulary1.page.html
+++ b/src/app/pages/beginner/topics-vocabulary1/topics-vocabulary1.page.html
@@ -113,7 +113,7 @@
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>The family</h4>
-                        <p>Total x words</p>
+                        <p>Total 21 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -137,7 +137,7 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
+        <a href="weather">
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
@@ -145,7 +145,7 @@
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>The weather</h4>
-                        <p>Total x words</p>
+                        <p>Total 8 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -162,22 +162,6 @@
                     <ion-col size="7" class="text">
                         <h4>The house</h4>
                         <p>Total 10 words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/prepositions.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Prepositions</h4>
-                        <p>Total x words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
