finalizando beginner level

--- a/src/app/pages/beginner/testess/testess.page.html
+++ b/src/app/pages/beginner/testess/testess.page.html
@@ -10,7 +10,7 @@
 
     <ion-content>
 
-        <ion-card routerLink="/teste1" (click)="addTestes()">
+        <ion-card routerLink="/teste1">
             <ion-card-header>
                 <ion-card-title>Practise test 1
 
@@ -18,19 +18,13 @@
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text2">
+        <ion-card routerLink="/teste2">
             <ion-card-header>
                 <ion-card-title>Practise test 2</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text3">
-            <ion-card-header>
-                <ion-card-title>Practise test 3</ion-card-title>
-            </ion-card-header>
-
-        </ion-card>
-        <ion-card href="text4">
+        <ion-card routerLink="/test-listening">
             <ion-card-header>
                 <ion-card-title>Listening test 1</ion-card-title>
             </ion-card-header>
@@ -42,31 +36,19 @@
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text6">
-            <ion-card-header>
-                <ion-card-title>Listening test 3</ion-card-title>
-            </ion-card-header>
 
-        </ion-card>
         <ion-card href="testvoc">
             <ion-card-header>
                 <ion-card-title>Vocabulary test 1</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text8">
+        <ion-card href="testvoc1">
             <ion-card-header>
                 <ion-card-title>Vocabulary test 2</ion-card-title>
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text9">
-            <ion-card-header>
-                <ion-card-title>Vocabulary test 3</ion-card-title>
-            </ion-card-header>
-
-        </ion-card>
-
 
     </ion-content>
 </ion-app>
