--- a/src/app/pages/beginner/testess/tests/teste1/teste1.page.html
+++ b/src/app/pages/beginner/testess/tests/teste1/teste1.page.html
@@ -2,9 +2,9 @@
     <ion-header translucent>
         <ion-toolbar>
             <ion-buttons slot="start">
-                <ion-back-button defaultHref="home"></ion-back-button>
+                <ion-back-button defaultHref="testess"></ion-back-button>
             </ion-buttons>
-            <ion-title>Teste de nivelamento</ion-title>
+            <ion-title>Practise teste</ion-title>
         </ion-toolbar>
     </ion-header>
 
@@ -19,19 +19,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">reads</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">reads</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">read</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">read</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">reading</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">reading</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">readed</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">readed</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -48,19 +48,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">whatched</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">whatched</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">watches</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">watches</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">watching</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">watching</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">watch</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">watch</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -75,19 +75,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">goes</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">goes</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">going</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">going</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">go</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">go</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">went</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">went</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -102,19 +102,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">did have</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">did have</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">didn't has</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">didn't has</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">didn't have</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">didn't have</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">did has</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">did has</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -128,19 +128,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">lived</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">lived</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">lives</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">lives</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">living</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">living</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">live</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">live</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -154,19 +154,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">reads</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">reads</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">reading</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">reading</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">read</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">read</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">readed</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">readed</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -180,19 +180,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">lives</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">lives</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">live</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">live</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">lived</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">lived</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">living</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">living</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -206,19 +206,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">was</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">was</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">were</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">were</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">been</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">been</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">weren't</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">weren't</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -234,19 +234,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">study</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">study</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">studying</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="presentAlert()">studying</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">studied</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">studied</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">studies</ion-button>
+                                <ion-button color="primary" (click)="wrongAlert()">studies</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
@@ -260,19 +260,19 @@
                     <ion-grid>
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">travelling</ion-button>
+                                <ion-button color="primary" (click)="showResult()">travelling</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">traveled</ion-button>
+                                <ion-button color="primary" (click)="showResult()">traveled</ion-button>
                             </ion-col>
                         </ion-row>
 
                         <ion-row>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="acerto()">travel</ion-button>
+                                <ion-button color="primary" (click)="acerto()" (click)="showResult()">travel</ion-button>
                             </ion-col>
                             <ion-col size="6">
-                                <ion-button color="primary" (click)="erro()">travels</ion-button>
+                                <ion-button color="primary" (click)="showResult()">travels</ion-button>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
