--- a/src/app/pages/beginner/testess/tests/testvoc/testvoc.page.scss
+++ b/src/app/pages/beginner/testess/tests/testvoc/testvoc.page.scss
@@ -20,4 +20,8 @@ ion-content {
         color: white;
         margin-left: 43%;
     }
+    img {
+        height: 200px;
+        width: 200px;
+    }
 }
